<resources>
    <string name="app_name">CU Library</string>
    <string name="e_library">eLibrary</string>

    <!--For SignInActivity-->
    <string name="Username">Email</string>
    <string name="Institute">Institute</string>
    <string name="Password">Password</string>
    <string name="CUIET">CUIET</string>
    <string name="session">Session</string>
    <string name="Year">2017–2018</string>
    <string name="LogIn">Sign In</string>
    <string name="FgtPwd">Forget Password</string>

    <!--For FragmentsActivity-->
    <string name="I_R">Issue Portal</string>
    <string name="BooksInfo">Books Info</string>
    <string name="StuInfo">Student Info</string>

    <!--For IssueActivity-->
    <string name="heading">Enter Bar-Code Number here</string>
    <string name="issue">To Issue : </string>
    <string name="eLibrary">eLibrary</string>
    <string name="enterCode">Enter Code here</string>
    <string name="toreturn">To Return : </string>
    <string name="submit">Submit</string>

    <!--For BooksActivity-->
    <string name="bookName">Book Name</string>
    <string name="authorName">Author Name</string>
    <string name="code">Book Code</string>

    <!--For Students Info-->
    <string name="name">Name</string>
    <string name="BooksIss">Books Issued</string>
    <string name="StuID">Student ID</string>
    <string name="Student_Information">Student Information</string>
    <string name="Name">Name</string>
    <string name="Sample_name">xyz</string>
    <string name="RollNo">RollNo</string>
    <string name="Sample_RollNo">12345678</string>
    <string name="Email">Email</string>
    <string name="Sample_Email">xyz@cu.com</string>
    <string name="DOB">DOB</string>
    <string name="Contact_Number">Contact Number</string>
    <string name="Barcode">BarCode</string>
    <string name="book_issued">Books Issued</string>
    <string name="book1">Book 1</string>
    <string name="book2">Book 2</string>
    <string name="book3">Book 3</string>
    <string name="book4">Book 4</string>
    <string name="book_code1">0001</string>
    <string name="book_code2">0011</string>
    <string name="book_code3">0111</string>
    <string name="book_code4">1111</string>
    <string name="book_name">Book Name</string>
    <string name="book_code">BarCode</string>


    <!--Content Description-->
    <string name="description">Chitkara Logo</string>

    <string name="loading">Loading</string>
    <string name="log_in">Log In</string>
    <string name="return_portal">Return Portal</string>
    <string name="to_return">To Return</string>
</resources>
