<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgblack">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/bgblack">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgblack"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Student_Information"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/white">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/contact"
            android:layout_gravity="center"
            android:contentDescription="@string/Student_Information" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textSize="15sp"
            android:padding="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greyrect"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RollNo"
            android:textSize="15sp"
            android:padding="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greyrect"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textSize="15sp"
            android:padding="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greyrect"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/DOB"
            android:textSize="15sp"
            android:padding="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greyrect"
            android:textAlignment="center"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contact_Number"
            android:textSize="15sp"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/greyrect"
            android:textAlignment="center"
            android:textStyle="bold"/>

    </LinearLayout>
    </LinearLayout>
</ScrollView>
</RelativeLayout>